--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <script src="worldstatehandler.js"></script>
-        <title>Page Title</title>
+        <title>Warframe Fissure Tracker</title>
     </head>
     <body onload="init()">
-        <h1>Teehee Funny</h1>
+        <h1>Fissures</h1>
         <ul id="myList"></ul>
     </body>
 </html>
