checkbox for hiding normal missions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <h1>Fissures</h1>
         <div id="container">
             <div id="checkboxes">
+                <input type="checkbox" id="hideNormal" onclick="checkNormal()">
+                <label for="hideNormal">Hide Normal</label>
                 <input type="checkbox" id="hideSteelPath" onclick="checkSteelPath()">
                 <label for="hideSteelPath">Hide Steel Path</label>
                 <input type="checkbox" id="hideVoidStorm" onclick="checkVoidStorm()">
