--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         <h1>Fissures</h1>
         <div id="container">
             <div id="checkboxes">
-                <input type="checkbox" id="hideNormal" onclick="checkNormal()">
-                <label for="hideNormal">Hide Normal</label>
-                <input type="checkbox" id="hideSteelPath" onclick="checkSteelPath()">
-                <label for="hideSteelPath">Hide Steel Path</label>
-                <input type="checkbox" id="hideVoidStorm" onclick="checkVoidStorm()">
-                <label for="hideVoidStorm">Hide Void Storm</label></br></br>
+                <input type="checkbox" id="toggleNormal" onclick="checkNormal()" checked>
+                <label for="toggleNormal">Normal</label>
+                <input type="checkbox" id="toggleSteelPath" onclick="checkSteelPath()" checked>
+                <label for="toggleSteelPath">Steel Path</label>
+                <input type="checkbox" id="toggleVoidStorm" onclick="checkVoidStorm()" checked>
+                <label for="toggleVoidStorm">Void Storm</label></br></br>
             </div>
             <div id="myList"></div>
         </div>
