Pretty background, misc css, photo credits

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <script src="worldstatehandler.js"></script>
         <title>Warframe Fissure Tracker</title>
     </head>
     <body onload="init()">
-        <h1>Fissures</h1>
+        <h1>Warframe Fissure Tracker</h1>
         <div id="container">
             <div id="checkboxes">
                 <input type="checkbox" id="toggleNormal" onclick="checkNormal()" checked>
@@ -16,6 +17,7 @@
                 <label for="toggleVoidStorm">Void Storm</label></br></br>
             </div>
             <div id="myList"></div>
+            <div id="bgcredits">Background Photo by <a href="https://minan1398.github.io/">Min An</a></div>
         </div>
     </body>
 </html>
