--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>Warframe Fissure Tracker</h1>
         <div id="container">
             <div id="checkboxes">
+                <img src="pig-blowing-bubbles.gif" id="pig" alt="look at this guy">
                 <input type="checkbox" id="toggleNormal" onclick="checkNormal()" checked>
                 <label for="toggleNormal">Normal</label>
                 <input type="checkbox" id="toggleSteelPath" onclick="checkSteelPath()" checked>
